# vkplaygrounds

./: .clang-format  .editorconfig  CMakeLists.txt  THANKS.md  TODO.md  blk-imgui.sublime-project  blk-playgrounds.sublime-project  ui.fragment.glsl  vcpkg-configuration.json  vcpkg.json  vkplaygrounds.sublime-project  vulkanapplication.cpp  vulkanapplication.hpp  vulkanapplicationbase.hpp  vulkanbuffer.cpp  vulkanbuffer.hpp  vulkandearimgui.cpp  vulkandearimgui.hpp  vulkandearimgui_imguiframe.cpp  vulkandearimgui_rendering.cpp  vulkandebug.hpp  vulkandevice.cpp  vulkandevice.hpp  vulkandevicebase.hpp  vulkandevicemixin.hpp  vulkanengine.cpp  vulkanengine.hpp  vulkangenerativeshader.cpp  vulkangenerativeshader.hpp  vulkaninstancemixin.hpp  vulkanphysicaldevice.cpp  vulkanphysicaldevice.hpp  vulkanphysicaldevicebase.hpp  vulkanphysicaldevicemixin.hpp  vulkanpresentation.cpp  vulkanpresentation.hpp  vulkanqueuefamilyindices.hpp  vulkanqueuemixin.hpp  vulkanscopedbuffermapping.hpp  vulkanscopedpresentableimage.hpp  (+7 more)
applications/00-sample/: CMakeLists.txt  charconv.hpp  console.hpp  vk00-sampledata.cpp  vk00-sampledata.hpp  vkapplication.cpp  vkapplication.hpp  vkengine.cpp  vkengine.hpp  vklauncher.cpp  vklauncher.hpp  vkpresentation.cpp  vkpresentation.hpp  vksurface.hpp  vkutilities.cpp  vkutilities.hpp  win32_charconv.cpp  win32_console.cpp  win32_console.hpp  win32_main.cpp  win32_windowprocedure.cpp  win32_windowprocedure.hpp
applications/meshviewer/: CMakeLists.txt  vkapplication.cpp  vkmeshviewer.cpp  vkmeshviewer.hpp  vkmeshviewerdata.cpp  vkmeshviewerui.cpp  vkmeshviewerui.hpp  vkpass.cpp  vkpass.hpp  vkpassscene.cpp  vkpassscene.hpp  vkpassuioverlay.cpp  vkpassuioverlay.hpp  vkpresentation.cpp  vkrenderpass.cpp  vksample0.cpp  vksample0.hpp  vkutilities.cpp  win32_main.cpp
core/: vkdevice.cpp  vkmemory.cpp  vkmesh.hpp  vkqueue.hpp  win32_vkdebug.cpp
data/fonts/: CMakeLists.txt
data/models/: .gitignore
data/shaders/: CMakeLists.txt  default-triangle.vertex.glsl  mesh-color.vertex.glsl  mesh-normal.fragment.glsl  mesh-normal.vertex.glsl  mesh-position.vertex.glsl  obj.fragment.glsl  obj.vertex.glsl  spirv2header.cpp  triangle.vertex.glsl  ui.vertex.glsl
fonts/: CMakeLists.txt
generic/: vkapplication.cpp  vkapplication.hpp  vulkandearimgui.cpp  vulkandearimgui.hpp  vulkandearimgui_rendering.cpp  vulkandebug.cpp  vulkanengine.cpp  vulkangenerativeshader.cpp  vulkangenerativeshader.hpp  vulkanpresentation.cpp  vulkanpresentation.hpp  vulkanutilities.hpp
libraries/core/: CMakeLists.txt  vkbuffer.hpp  vkcamera.hpp  vkdebug.cpp  vkdevice.hpp  vkimage.hpp  vkmat4.hpp  vkmemory.cpp  vkmemory.hpp  vkmesh.cpp  vkmesh.hpp  vkphysicaldevice.cpp  vkphysicaldevice.hpp  vkqueue.hpp  vksize.hpp  vkvec3.hpp  vkvec4.hpp
libraries/scene/: CMakeLists.txt  vkcamera.cpp  vkcamera.hpp  vkcpumesh.cpp  vkcpumesh.hpp  vkgpumesh.cpp  vkgpumesh.hpp  vkmaterial.cpp  vkmaterial.hpp  vkmesh.cpp  vkmesh.hpp  vkrenderable.hpp
libraries/xxx2mesh/: CMakeLists.txt  obj2mesh.cpp  obj2mesh.hpp  obj2mesh_v0.cpp
models/: CMakeLists.txt  obj2mesh.cpp
scripts/: configure-vkplaygrounds-windows-clang-x86-64.cmd  configure-vkplaygrounds.cmd
shaders/: CMakeLists.txt  triangle.fragment.glsl  ui.fragment.glsl  ui.vertex.glsl
src/: utilities.hpp  vkapplication.cpp  vkapplication.hpp  vkbuffer.hpp  vkdebug.cpp  vkdebug.hpp  vkdevice.hpp  vkengine.cpp  vkengine.hpp  vkimage.cpp  vkimage.hpp  vkmemory.cpp  vkmemory.hpp  vkpass.hpp  vkpassuioverlay.cpp  vkpassuioverlay.hpp  vkphysicaldevice.cpp  vkphysicaldevice.hpp  vkpresentation.cpp  vkpresentation.hpp  vkqueue.cpp  vkrenderpass.hpp  vksurface.cpp  vksurface.hpp  vkutilities.hpp  vulkanbuffer.cpp  vulkandearimgui.cpp  vulkandearimgui_rendering.cpp  vulkanengine.cpp  vulkangenerativeshader.cpp  vulkanpresentation.cpp  vulkanqueuemixin.hpp  win32_main.cpp  win32_vkapplication.cpp  win32_vkapplication.hpp  win32_vkdebug.cpp  win32_vksurface.cpp  win32_vkutilities.hpp
src/core/: CMakeLists.txt  vkbuffer.cpp  vkdebug.hpp  vkimage.hpp  vkmesh.hpp  vkphysicaldevice.hpp
src/dearimgui/: dearimguishowcase.cpp  dearimguishowcase.hpp
src/sample0/: vkpassscene.cpp  vkpassscene.hpp  vkpassuioverlay.cpp  vkpassuioverlay.hpp  vksample0.cpp  vksample0.hpp
toolchains/: windows-clang-x86-64.cmake
utilities/: enumeraterange.hpp  utilities.hpp  ziprange.hpp
win32/: winmain.cpp
xxx2mesh/: main_obj2mesh.cpp  obj2mesh.cpp  obj2mesh.hpp
